[package]
name = "pallet-referenda"
version = "4.0.0-dev"
authors = ["Bittensor Nucleus Team"]
edition.workspace = true
license = "Unlicense"
publish = false
repository = "https://github.com/opentensor/subtensor"
homepage = "https://bittensor.com"
description = "A pallet for on-chain decision making"
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
subtensor-runtime-common = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-system/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-io/std",
	"subtensor-runtime-common/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"subtensor-runtime-common/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
